--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # v4.1.7
 
       - name: Log in to the GitHub Container Registry
-        uses: docker/login-action@9780b0c442fbb1117ed2f7f6291d6c29c5ef7426 # v3.1.0
+        uses: docker/login-action@v3.2.0
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
