--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "MCP Server for baseline feature suggestions",
   "main": "server.js",
+  "type": "module",
   "bin": {
     "baseline-mcp": "./bin/baseline-mcp"
   },
   "scripts": {
-    "start": "node server.js"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "inspect": "tsc &&npx @modelcontextprotocol/inspector node ./dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.1",
     "web-features": "^3.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.2"
   }
 }
